@@ -1,3 +1,9 @@
+2004-06-03  Sam Steingold  <sds@gnu.org>
+
+	* condition.lisp (check-value): use RETRY restart instead of CONTINUE
+	(retry): new function, invokes RETRY restart (similar to CONTINUE,
+	but is not triggered by EOF/Ctr-D)
+
 2004-05-29  Bruno Haible  <bruno@clisp.org>
 
 	* clos-package.lisp: Import ext:proper-list-p.
